updating the notebook

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -226,6 +226,271 @@
     "\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aec8da2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['instant', 'dteday', 'season', 'yr', 'mnth', 'hr', 'holiday', 'weekday',\n",
+       "       'workingday', 'weathersit', 'temp', 'atemp', 'hum', 'windspeed',\n",
+       "       'casual', 'registered', 'cnt', 'mixed_type_col'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e85ef383",
+   "metadata": {},
+   "source": [
+    "##### Instant is an ID Column we can drop it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1449a31c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=[\"instant\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c8384a92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17726, 17)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "661f540a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dteday             184\n",
+       "season             207\n",
+       "yr                 211\n",
+       "mnth               211\n",
+       "hr                 237\n",
+       "holiday            174\n",
+       "weekday            187\n",
+       "workingday         199\n",
+       "weathersit         200\n",
+       "temp               180\n",
+       "atemp              192\n",
+       "hum                214\n",
+       "windspeed          181\n",
+       "casual             203\n",
+       "registered         196\n",
+       "cnt                192\n",
+       "mixed_type_col    1753\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ab0af573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dteday            1.038023\n",
+       "season            1.167776\n",
+       "yr                1.190342\n",
+       "mnth              1.190342\n",
+       "hr                1.337019\n",
+       "holiday           0.981609\n",
+       "weekday           1.054948\n",
+       "workingday        1.122645\n",
+       "weathersit        1.128286\n",
+       "temp              1.015458\n",
+       "atemp             1.083155\n",
+       "hum               1.207266\n",
+       "windspeed         1.021099\n",
+       "casual            1.145210\n",
+       "registered        1.105720\n",
+       "cnt               1.083155\n",
+       "mixed_type_col    9.889428\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_percentage = df.isna().mean() * 100\n",
+    "null_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9bacab1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mixed_type_col\n",
+       "unknown    1768\n",
+       "bad        1744\n",
+       "223          26\n",
+       "404          24\n",
+       "965          23\n",
+       "           ... \n",
+       "217           4\n",
+       "128           4\n",
+       "385           3\n",
+       "540           3\n",
+       "342           2\n",
+       "Name: count, Length: 1002, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"mixed_type_col\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dca15ad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dteday            object\n",
+       "season            object\n",
+       "yr                object\n",
+       "mnth              object\n",
+       "hr                object\n",
+       "holiday           object\n",
+       "weekday           object\n",
+       "workingday        object\n",
+       "weathersit        object\n",
+       "temp              object\n",
+       "atemp             object\n",
+       "hum               object\n",
+       "windspeed         object\n",
+       "casual            object\n",
+       "registered        object\n",
+       "cnt               object\n",
+       "mixed_type_col    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5a04e678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dteday            1253\n",
+       "season             155\n",
+       "yr                 128\n",
+       "mnth               190\n",
+       "hr                 218\n",
+       "holiday            101\n",
+       "weekday            168\n",
+       "workingday         119\n",
+       "weathersit         172\n",
+       "temp               281\n",
+       "atemp              320\n",
+       "hum                337\n",
+       "windspeed          219\n",
+       "casual             598\n",
+       "registered        1227\n",
+       "cnt               1372\n",
+       "mixed_type_col    1002\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c514dc75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "293f6e09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
