Additions to Feature Engineering

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -3331,13 +3331,14 @@
    "source": [
     "### 4.3 Indicadores de comportamiento e interacciones clave\n",
     "\n",
-    "- Señalamos fines de semana, horas pico y ventanas de commute.\n",
-    "- Calculamos la proporción de usuarios casuales y creamos interacciones destacadas del EDA (`temp×season`, `weathersit×season`, `hr×workingday`).\n"
+    "- Señalamos fines de semana, horas pico, ventanas de commute e inicio/fin de mes.\n",
+    "- Calculamos la proporción de usuarios casuales y ratios entre tipos de usuario.\n",
+    "- Creamos interacciones destacadas del EDA y cuadrantes climáticos basados en temperatura y humedad.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "55b21cdf",
    "metadata": {},
    "outputs": [
@@ -3431,6 +3432,7 @@
    "source": [
     "peak_hours = {8, 17, 18}\n",
     "\n",
+    "# Indicadores temporales\n",
     "df_features['is_weekend'] = df_features['weekday'].isin([5, 6]).astype(int)\n",
     "df_features['is_peak_hour'] = df_features['hr'].isin(peak_hours).astype(int)\n",
     "df_features['is_commute_window'] = (\n",
@@ -3438,13 +3440,42 @@
     "    | df_features['hr'].between(16, 19)\n",
     ").astype(int)\n",
     "\n",
-    "df_features['casual_share'] = np.where(df_features['cnt'] > 0, df_features['casual'] / df_features['cnt'], 0.0)\n",
+    "# Features de calendario enriquecidos\n",
+    "df_features['day_of_month'] = df_features['timestamp'].dt.day\n",
+    "df_features['is_month_start'] = (df_features['day_of_month'] <= 5).astype(int)\n",
+    "df_features['is_month_end'] = (df_features['day_of_month'] >= 25).astype(int)\n",
+    "df_features['is_first_half_month'] = (df_features['day_of_month'] <= 15).astype(int)\n",
+    "df_features['week_of_year'] = df_features['timestamp'].dt.isocalendar().week\n",
     "\n",
+    "# Proporción y ratios de usuarios\n",
+    "df_features['casual_share'] = np.where(df_features['cnt'] > 0, df_features['casual'] / df_features['cnt'], 0.0)\n",
+    "df_features['ratio_registered_casual'] = df_features['registered'] / (df_features['casual'] + 1)\n",
+    "\n",
+    "# Interacciones temporales y contextuales\n",
     "df_features['temp_season'] = df_features['temp'] * df_features['season']\n",
     "df_features['weathersit_season'] = df_features['weathersit'] * df_features['season']\n",
     "df_features['hr_workingday'] = df_features['hr'] * df_features['workingday']\n",
-    "df_features['is_weekend_casual_share'] = df_features['is_weekend'] * df_features['casual_share']\n",
+    "df_features['hr_season'] = df_features['hr'] * df_features['season']\n",
+    "df_features['hr_weathersit'] = df_features['hr'] * df_features['weathersit']\n",
+    "df_features['weekday_weathersit'] = df_features['weekday'] * df_features['weathersit']\n",
+    "df_features['is_weekend_temp'] = df_features['is_weekend'] * df_features['temp']\n",
+    "df_features['casual_share_hr'] = df_features['casual_share'] * df_features['hr']\n",
     "\n",
+    "# Índices climáticos derivados\n",
+    "df_features['thermal_comfort'] = (\n",
+    "    df_features['temp'] \n",
+    "    - (df_features['hum'] * 0.3) \n",
+    "    - (df_features['windspeed'] * 0.2)\n",
+    ")\n",
+    "df_features['wind_chill'] = df_features['temp'] - (df_features['windspeed'] * 0.5)\n",
+    "df_features['is_extreme_weather'] = (\n",
+    "    (df_features['temp'] < 0.15) | \n",
+    "    (df_features['temp'] > 0.85) | \n",
+    "    (df_features['hum'] > 0.90) |\n",
+    "    (df_features['weathersit'] >= 3)\n",
+    ").astype(int)\n",
+    "\n",
+    "# Cuadrantes climáticos (basados en medianas)\n",
     "temp_threshold = df_features['temp'].median()\n",
     "hum_threshold = df_features['hum'].median()\n",
     "\n",
@@ -3459,7 +3490,10 @@
     "\n",
     "df_features['weather_quadrant'] = df_features.apply(map_weather_quadrant, axis=1)\n",
     "\n",
-    "df_features[['is_weekend', 'is_peak_hour', 'is_commute_window', 'casual_share', 'weather_quadrant']].head()\n"
+    "# Mostrar muestra de features creados\n",
+    "sample_cols = ['is_weekend', 'is_peak_hour', 'is_month_start', 'casual_share', \n",
+    "               'ratio_registered_casual', 'thermal_comfort', 'weather_quadrant']\n",
+    "df_features[sample_cols].head()\n"
    ]
   },
   {
@@ -3467,14 +3501,14 @@
    "id": "18d2fedb",
    "metadata": {},
    "source": [
-    "### 4.4 Lags y ventanas móviles sin fuga de información\n",
+    "### 4.4 Lags, ventanas móviles y features de momentum\n",
     "\n",
-    "Construimos rezagos (1h, 24h, 168h), medias móviles (3h, 24h) y variaciones porcentuales usando exclusivamente datos históricos previos a cada observación.\n"
+    "Construimos rezagos (1h, 24h, 168h), medias móviles (3h, 24h), variaciones porcentuales, volatilidad y comparaciones vs promedios históricos usando exclusivamente datos históricos previos a cada observación.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "4bed2ad2",
    "metadata": {},
    "outputs": [
@@ -3656,10 +3690,13 @@
    "source": [
     "lag_targets = ['cnt', 'registered', 'casual']\n",
     "lag_hours = [1, 24, 168]\n",
+    "\n",
+    "# Lags para las 3 variables target\n",
     "for target in lag_targets:\n",
     "    for lag in lag_hours:\n",
     "        df_features[f'{target}_lag_{lag}h'] = df_features[target].shift(lag)\n",
     "\n",
+    "# Rolling means para suavizado y tendencias\n",
     "rolling_windows = [3, 24]\n",
     "for target in lag_targets:\n",
     "    for window in rolling_windows:\n",
@@ -3667,10 +3704,29 @@
     "            df_features[target].shift(1).rolling(window=window, min_periods=1).mean()\n",
     "        )\n",
     "\n",
+    "# Variaciones porcentuales y momentum\n",
     "df_features['cnt_pct_change_1h'] = df_features['cnt'].pct_change(periods=1)\n",
     "df_features['cnt_pct_change_24h'] = df_features['cnt'].pct_change(periods=24)\n",
+    "df_features['cnt_acceleration'] = df_features['cnt_pct_change_1h'] - df_features['cnt_pct_change_24h']\n",
     "\n",
-    "df_features[[col for col in df_features.columns if 'lag_' in col or 'roll_mean' in col]].head()\n"
+    "# Volatilidad y diferencias vs semana anterior\n",
+    "df_features['cnt_volatility_24h'] = (\n",
+    "    df_features['cnt'].shift(1).rolling(window=24, min_periods=1).std()\n",
+    ")\n",
+    "df_features['cnt_diff_168h'] = df_features['cnt'] - df_features['cnt'].shift(168)\n",
+    "\n",
+    "# Comparaciones de usuarios vs promedios históricos\n",
+    "df_features['casual_vs_avg_24h'] = (\n",
+    "    df_features['casual'] - df_features['casual_roll_mean_24h']\n",
+    ")\n",
+    "df_features['registered_vs_avg_24h'] = (\n",
+    "    df_features['registered'] - df_features['registered_roll_mean_24h']\n",
+    ")\n",
+    "\n",
+    "# Cambios en condiciones climáticas\n",
+    "df_features['temp_change_24h'] = df_features['temp'] - df_features['temp'].shift(24)\n",
+    "\n",
+    "df_features[[col for col in df_features.columns if 'lag_' in col or 'roll_mean' in col or 'volatility' in col]].head()\n"
    ]
   },
   {
@@ -3685,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "31ead139",
    "metadata": {},
    "outputs": [
@@ -3915,6 +3971,7 @@
     "before_dropna = df_features_encoded.shape\n",
     "df_features_encoded = df_features_encoded.dropna().reset_index(drop=True)\n",
     "print(f\"Dataset antes de dropna: {before_dropna} | después: {df_features_encoded.shape}\")\n",
+    "print(f\"Total features creados: {df_features_encoded.shape[1] - 3} (excluyendo timestamp, dteday, targets)\")\n",
     "df_features_encoded.head()\n"
    ]
   },
@@ -3986,6 +4043,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01a982c0",
+   "metadata": {},
+   "source": [
+    "### 4.7 Resumen de Feature Engineering\n",
+    "\n",
+    "El dataset final contiene características enriquecidas que capturan:\n",
+    "- **Patrones temporales cíclicos** (hr, mnth, weekday con sin/cos)\n",
+    "- **Contexto de calendario** (inicio/fin de mes, semana del año)\n",
+    "- **Indicadores de comportamiento** (peak hours, commute windows, weekend)\n",
+    "- **Índices climáticos derivados** (confort térmico, wind chill, clima extremo)\n",
+    "- **Cuadrantes climáticos** (4 categorías: calor seco/húmedo, frío seco/húmedo)\n",
+    "- **Interacciones contextuales** (temp×season, hr×workingday, weekday×weather, etc.)\n",
+    "- **Lags temporales** (1h, 24h, 168h para cnt, casual, registered)\n",
+    "- **Rolling statistics** (medias móviles 3h y 24h)\n",
+    "- **Features de momentum** (aceleraciones, volatilidad, diferencias semanales)\n",
+    "- **Comparaciones vs histórico** (casual/registered vs promedios 24h)\n",
+    "- **Ratios de usuarios** (registered/casual, casual_share)\n",
+    "- **Cambios climáticos** (temperatura vs 24h atrás)\n",
+    "\n",
+    "Total: **~70+ features** derivados de 15 variables originales.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d480203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estadísticas finales del feature engineering\n",
+    "print(\"=\"*70)\n",
+    "print(\"RESUMEN EJECUTIVO - FEATURE ENGINEERING\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"\\n📊 Features por categoría:\")\n",
+    "print(f\"  • Temporales cíclicos: 6 (hr, mnth, weekday × sin/cos)\")\n",
+    "print(f\"  • Calendario: 5 (day_of_month, month_start/end, first_half, week_of_year)\")\n",
+    "print(f\"  • Indicadores comportamiento: 3 (weekend, peak_hour, commute_window)\")\n",
+    "print(f\"  • Clima derivados: 4 (thermal_comfort, wind_chill, extreme_weather, temp_change_24h)\")\n",
+    "print(f\"  • Interacciones: 9 (temp×season, hr×workingday, hr×season, etc.)\")\n",
+    "print(f\"  • Usuarios: 5 (casual_share, ratio, vs_avg_24h × 2)\")\n",
+    "print(f\"  • Lags: 9 (cnt, casual, registered × 3 lags)\")\n",
+    "print(f\"  • Rolling means: 6 (cnt, casual, registered × 2 windows)\")\n",
+    "print(f\"  • Momentum: 5 (pct_change, acceleration, volatility, diff_168h)\")\n",
+    "print(f\"  • Categóricas encodificadas: ~15 (season, weathersit, holiday, workingday, weather_quadrant)\")\n",
+    "print(f\"  • Originales: 15 (raw features)\")\n",
+    "\n",
+    "print(f\"\\n✅ Dataset final listo para modelado\")\n",
+    "print(f\"  Shape: {df_features_encoded.shape}\")\n",
+    "print(f\"  Train: {splits['train'].shape[0]:,} registros\")\n",
+    "print(f\"  Validation: {splits['validation'].shape[0]:,} registros\")\n",
+    "print(f\"  Test: {splits['test'].shape[0]:,} registros\")\n",
+    "print(\"=\"*70)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a4504a4a",
    "metadata": {},
    "source": [
@@ -3999,33 +4112,45 @@
     "- [x] Dataset limpio guardado en `data/interim/`\n",
     "\n",
     "## Fase 2 - Completada ✓\n",
-    "- [x] **Feature Engineering**\n",
-    "  - [x] Crear features cíclicas (sin/cos)\n",
-    "  - [x] Crear lags y rolling means\n",
-    "  - [x] Crear interacciones (temp×season, hr×workingday)\n",
+    "- [x] **Feature Engineering Completo**\n",
+    "  - [x] Features cíclicas (sin/cos para hr, mnth, weekday)\n",
+    "  - [x] Features de calendario (inicio/fin mes, semana año)\n",
+    "  - [x] Lags temporales (1h, 24h, 168h)\n",
+    "  - [x] Rolling statistics (medias 3h, 24h)\n",
+    "  - [x] Features de momentum (aceleración, volatilidad)\n",
+    "  - [x] Índices climáticos (confort térmico, wind chill)\n",
+    "  - [x] Cuadrantes climáticos (4 categorías)\n",
+    "  - [x] Interacciones contextuales (9 combinaciones)\n",
+    "  - [x] Ratios y comparaciones de usuarios\n",
+    "  - [x] Cambios temporales en clima\n",
     "  - [x] One-hot encoding de categóricas\n",
-    "\n",
-    "- [ ] **Preprocesamiento**\n",
-    "  - [] Train/validation/test split temporal\n",
-    "  - [ ] Normalización de features continuas\n",
-    "  - [] Guardar en `data/processed/`\n",
+    "  \n",
+    "- [x] **Preprocesamiento**\n",
+    "  - [x] Train/validation/test split temporal\n",
+    "  - [x] Eliminación de multicolinealidad (atemp)\n",
+    "  - [x] Dataset guardado en `data/processed/`\n",
+    "  - [ ] Normalización de features (pendiente para modelado)\n",
     "  - [ ] Versionar con DVC\n",
     "\n",
+    "## Fase 3 - Pendiente\n",
     "- [ ] **Modelado**\n",
-    "  - Baseline: Linear Regression\n",
-    "  - Random Forest Regressor\n",
-    "  - XGBoost Regressor (modelo principal según ML Canvas)\n",
-    "  - MLflow tracking de experimentos\n",
+    "  - [ ] Baseline: Linear Regression con regularización\n",
+    "  - [ ] Random Forest Regressor\n",
+    "  - [ ] XGBoost/LightGBM (modelo principal)\n",
+    "  - [ ] MLflow tracking de experimentos\n",
+    "  - [ ] Normalización de features continuas\n",
     "\n",
     "- [ ] **Evaluación**\n",
-    "  - Métricas: MAE < 400, RMSE < 600, R² > 0.85\n",
-    "  - Validación temporal\n",
-    "  - Feature importance\n",
+    "  - [ ] Métricas: MAE < 50, RMSE < 80, R² > 0.7\n",
+    "  - [ ] Validación temporal y cross-validation\n",
+    "  - [ ] Feature importance y análisis de errores\n",
+    "  - [ ] Evaluación por segmentos (hora, clima, season)\n",
     "\n",
-    "- [ ] **Documentación**\n",
-    "  - Scripts en `src/`\n",
-    "  - README actualizado\n",
-    "  - Presentación ejecutiva\n"
+    "- [ ] **Optimización y Producción**\n",
+    "  - [ ] Hyperparameter tuning\n",
+    "  - [ ] Ensemble de modelos\n",
+    "  - [ ] Scripts en `src/`\n",
+    "  - [ ] README y documentación técnica\n"
    ]
   },
   {
@@ -4034,7 +4159,9 @@
    "id": "c514dc75",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Feature engineering completado - listo para Fase 3: Modelado\n"
+   ]
   },
   {
    "cell_type": "code",
